@@ -20,6 +20,7 @@ import org.opentripplanner.ext.flex.flexpathcalculator.StreetFlexPathCalculator;
 import org.opentripplanner.ext.flex.template.FlexAccessTemplate;
 import org.opentripplanner.ext.flex.template.FlexEgressTemplate;
 import org.opentripplanner.ext.flex.trip.FlexTrip;
+import org.opentripplanner.framework.application.OTPRequestTimeoutException;
 import org.opentripplanner.framework.time.ServiceDateUtils;
 import org.opentripplanner.model.plan.Itinerary;
 import org.opentripplanner.routing.algorithm.mapping.GraphPathToItineraryMapper;
@@ -113,6 +114,7 @@ public class FlexRouter {
   }
 
   public Collection<Itinerary> createFlexOnlyItineraries() {
+    OTPRequestTimeoutException.checkForTimeout();
     calculateFlexAccessTemplates();
     calculateFlexEgressTemplates();
 
@@ -146,19 +148,21 @@ public class FlexRouter {
   }
 
   public Collection<FlexAccessEgress> createFlexAccesses() {
+    OTPRequestTimeoutException.checkForTimeout();
     calculateFlexAccessTemplates();
 
     return this.flexAccessTemplates.stream()
       .flatMap(template -> template.createFlexAccessEgressStream(graph, transitService))
-      .collect(Collectors.toList());
+      .toList();
   }
 
   public Collection<FlexAccessEgress> createFlexEgresses() {
+    OTPRequestTimeoutException.checkForTimeout();
     calculateFlexEgressTemplates();
 
     return this.flexEgressTemplates.stream()
       .flatMap(template -> template.createFlexAccessEgressStream(graph, transitService))
-      .collect(Collectors.toList());
+      .toList();
   }
 
   private void calculateFlexAccessTemplates() {
@@ -182,7 +186,7 @@ public class FlexRouter {
                 .getFlexAccessTemplates(it.accessEgress(), date, accessFlexPathCalculator, config)
             )
         )
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private void calculateFlexEgressTemplates() {
@@ -206,7 +210,7 @@ public class FlexRouter {
                 .getFlexEgressTemplates(it.accessEgress(), date, egressFlexPathCalculator, config)
             )
         )
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private Stream<AccessEgressAndNearbyStop> getClosestFlexTrips(
