@@ -2,118 +2,20 @@ package org.opentripplanner.framework.io;
 
 import jakarta.ws.rs.core.HttpHeaders;
 import jakarta.ws.rs.core.UriInfo;
-import java.io.IOException;
-import java.io.InputStream;
-import java.net.URI;
-import java.net.URL;
-import java.time.Duration;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import org.apache.http.Header;
-import org.apache.http.HttpEntity;
-import org.apache.http.HttpResponse;
-import org.apache.http.client.config.RequestConfig;
-import org.apache.http.client.methods.HttpGet;
-import org.apache.http.client.methods.HttpHead;
-import org.apache.http.client.methods.HttpRequestBase;
-import org.apache.http.impl.client.HttpClientBuilder;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.apache.hc.core5.http.ContentType;
 
-public class HttpUtils {
+public final class HttpUtils {
 
-  private static final Logger LOG = LoggerFactory.getLogger(HttpUtils.class);
-  private static final Duration DEFAULT_TIMEOUT = Duration.ofSeconds(5);
-  public static final String HEADER_X_FORWARDED_PROTO = "X-Forwarded-Proto";
-  public static final String HEADER_X_FORWARDED_HOST = "X-Forwarded-Host";
-  public static final String HEADER_HOST = "Host";
+  private HttpUtils() {}
+
+  public static final Object TEXT_PLAIN = ContentType.create("text/plain", StandardCharsets.UTF_8);
   public static final String APPLICATION_X_PROTOBUF = "application/x-protobuf";
 
-  public static InputStream getData(URI uri) throws IOException {
-    return getData(uri, null);
-  }
-
-  public static InputStream getData(String uri) throws IOException {
-    return getData(URI.create(uri));
-  }
-
-  public static InputStream getData(String uri, Map<String, String> headers) throws IOException {
-    return getData(URI.create(uri), headers);
-  }
-
-  public static InputStream getData(
-    URI uri,
-    Duration timeout,
-    Map<String, String> requestHeaderValues
-  ) throws IOException {
-    HttpResponse response = getResponse(new HttpGet(uri), timeout, requestHeaderValues);
-    if (response.getStatusLine().getStatusCode() != 200) {
-      return null;
-    }
-    HttpEntity entity = response.getEntity();
-    if (entity == null) {
-      return null;
-    }
-    return entity.getContent();
-  }
-
-  public static InputStream getData(URI uri, Map<String, String> requestHeaderValues)
-    throws IOException {
-    return getData(uri, DEFAULT_TIMEOUT, requestHeaderValues);
-  }
-
-  public static List<Header> getHeaders(
-    URI uri,
-    Duration timeout,
-    Map<String, String> requestHeaderValues
-  ) {
-    HttpResponse response;
-    //
-    try {
-      response = getResponse(new HttpHead(uri), timeout, requestHeaderValues);
-    } catch (IOException e) {
-      throw new RuntimeException(
-        "Network error while querying headers for resource " + sanitizeUri(uri),
-        e
-      );
-    }
-    if (response.getStatusLine().getStatusCode() != 200) {
-      LOG.warn(
-        "Headers of Resource {} unavailable. HTTP error code {}",
-        sanitizeUri(uri),
-        response.getStatusLine().getStatusCode()
-      );
-
-      return Collections.emptyList();
-    }
-    return Arrays.stream(response.getAllHeaders()).toList();
-  }
-
-  /**
-   * Remove the query part from the URI.
-   */
-  private static String sanitizeUri(URI uri) {
-    return uri.toString().replace('?' + uri.getQuery(), "");
-  }
-
-  public static InputStream openInputStream(String url, Map<String, String> headers)
-    throws IOException {
-    return openInputStream(URI.create(url), headers);
-  }
-
-  public static InputStream openInputStream(URI uri, Map<String, String> headers)
-    throws IOException {
-    URL downloadUrl = uri.toURL();
-    String proto = downloadUrl.getProtocol();
-    if (proto.equals("http") || proto.equals("https")) {
-      return HttpUtils.getData(uri, headers);
-    } else {
-      // Local file probably, try standard java
-      return downloadUrl.openStream();
-    }
-  }
+  private static final String HEADER_X_FORWARDED_PROTO = "X-Forwarded-Proto";
+  private static final String HEADER_X_FORWARDED_HOST = "X-Forwarded-Host";
+  private static final String HEADER_HOST = "Host";
 
   /**
    * Get the canonical url of a request, either based on headers or the URI. See
@@ -123,16 +25,16 @@ public class HttpUtils {
   public static String getBaseAddress(UriInfo uri, HttpHeaders headers) {
     String protocol;
     if (headers.getRequestHeader(HEADER_X_FORWARDED_PROTO) != null) {
-      protocol = headers.getRequestHeader(HEADER_X_FORWARDED_PROTO).get(0);
+      protocol = headers.getRequestHeader(HEADER_X_FORWARDED_PROTO).getFirst();
     } else {
       protocol = uri.getRequestUri().getScheme();
     }
 
     String host;
     if (headers.getRequestHeader(HEADER_X_FORWARDED_HOST) != null) {
-      host = headers.getRequestHeader(HEADER_X_FORWARDED_HOST).get(0);
+      host = extractHost(headers.getRequestHeader(HEADER_X_FORWARDED_HOST).getFirst());
     } else if (headers.getRequestHeader(HEADER_HOST) != null) {
-      host = headers.getRequestHeader(HEADER_HOST).get(0);
+      host = headers.getRequestHeader(HEADER_HOST).getFirst();
     } else {
       host = uri.getBaseUri().getHost() + ":" + uri.getBaseUri().getPort();
     }
@@ -140,27 +42,11 @@ public class HttpUtils {
     return protocol + "://" + host;
   }
 
-  private static HttpResponse getResponse(
-    HttpRequestBase httpRequest,
-    Duration timeout,
-    Map<String, String> requestHeaderValues
-  ) throws IOException {
-    var to = (int) timeout.toMillis();
-    RequestConfig requestConfig = RequestConfig
-      .custom()
-      .setSocketTimeout(to)
-      .setConnectTimeout(to)
-      .setConnectionRequestTimeout(to)
-      .build();
-
-    httpRequest.setConfig(requestConfig);
-
-    if (requestHeaderValues != null) {
-      for (Map.Entry<String, String> entry : requestHeaderValues.entrySet()) {
-        httpRequest.addHeader(entry.getKey(), entry.getValue());
-      }
-    }
-
-    return HttpClientBuilder.create().build().execute(httpRequest);
+  /**
+   * The X-Forwarded-Host header can contain a comma-separated list so we account for that.
+   * https://stackoverflow.com/questions/66042952/http-proxy-behavior-for-x-forwarded-host-header
+   */
+  private static String extractHost(String xForwardedFor) {
+    return Arrays.stream(xForwardedFor.split(",")).map(String::strip).findFirst().get();
   }
 }
