@@ -3,15 +3,13 @@ package org.opentripplanner.graph_builder.module.linking;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.opentripplanner.graph_builder.module.FakeGraph.addExtraStops;
-import static org.opentripplanner.graph_builder.module.FakeGraph.addRegularStopGrid;
-import static org.opentripplanner.graph_builder.module.FakeGraph.buildGraphNoTransit;
-import static org.opentripplanner.graph_builder.module.FakeGraph.link;
+import static org.opentripplanner.graph_builder.module.linking.TestGraph.addExtraStops;
+import static org.opentripplanner.graph_builder.module.linking.TestGraph.addRegularStopGrid;
+import static org.opentripplanner.graph_builder.module.linking.TestGraph.link;
 
-import java.net.URISyntaxException;
+import java.io.File;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.Test;
 import org.locationtech.jts.geom.Coordinate;
 import org.locationtech.jts.geom.GeometryFactory;
@@ -20,15 +18,21 @@ import org.opentripplanner.TestOtpModel;
 import org.opentripplanner.framework.geometry.GeometryUtils;
 import org.opentripplanner.framework.geometry.SphericalDistanceLibrary;
 import org.opentripplanner.framework.i18n.NonLocalizedString;
+import org.opentripplanner.graph_builder.module.osm.OsmModule;
+import org.opentripplanner.openstreetmap.OsmProvider;
 import org.opentripplanner.routing.graph.Graph;
 import org.opentripplanner.street.model.StreetTraversalPermission;
+import org.opentripplanner.street.model._data.StreetModelForTest;
 import org.opentripplanner.street.model.edge.StreetEdge;
+import org.opentripplanner.street.model.edge.StreetEdgeBuilder;
 import org.opentripplanner.street.model.edge.StreetTransitStopLink;
-import org.opentripplanner.street.model.vertex.IntersectionVertex;
 import org.opentripplanner.street.model.vertex.SplitterVertex;
 import org.opentripplanner.street.model.vertex.StreetVertex;
 import org.opentripplanner.street.model.vertex.TransitStopVertex;
 import org.opentripplanner.street.model.vertex.Vertex;
+import org.opentripplanner.test.support.ResourceLoader;
+import org.opentripplanner.transit.model.framework.Deduplicator;
+import org.opentripplanner.transit.service.StopModel;
 import org.opentripplanner.transit.service.TransitModel;
 
 public class LinkingTest {
@@ -44,43 +48,41 @@ public class LinkingTest {
     double x = -122.123;
     double y = 37.363;
     for (double delta = 0; delta <= 2; delta += 0.005) {
-      StreetVertex v0 = new IntersectionVertex(null, "zero", x, y);
-      StreetVertex v1 = new IntersectionVertex(null, "one", x + delta, y + delta);
+      StreetVertex v0 = StreetModelForTest.intersectionVertex("zero", x, y);
+      StreetVertex v1 = StreetModelForTest.intersectionVertex("one", x + delta, y + delta);
       LineString geom = gf.createLineString(
         new Coordinate[] { v0.getCoordinate(), v1.getCoordinate() }
       );
       double dist = SphericalDistanceLibrary.distance(v0.getCoordinate(), v1.getCoordinate());
-      StreetEdge s0 = new StreetEdge(
-        v0,
-        v1,
-        geom,
-        "test",
-        dist,
-        StreetTraversalPermission.ALL,
-        false
-      );
-      StreetEdge s1 = new StreetEdge(
-        v1,
-        v0,
-        (LineString) geom.reverse(),
-        "back",
-        dist,
-        StreetTraversalPermission.ALL,
-        true
-      );
+      StreetEdge s0 = new StreetEdgeBuilder<>()
+        .withFromVertex(v0)
+        .withToVertex(v1)
+        .withGeometry(geom)
+        .withName("test")
+        .withMeterLength(dist)
+        .withPermission(StreetTraversalPermission.ALL)
+        .withBack(false)
+        .buildAndConnect();
+      StreetEdge s1 = new StreetEdgeBuilder<>()
+        .withFromVertex(v1)
+        .withToVertex(v0)
+        .withGeometry(geom.reverse())
+        .withName("back")
+        .withMeterLength(dist)
+        .withPermission(StreetTraversalPermission.ALL)
+        .withBack(true)
+        .buildAndConnect();
 
       // split it but not too close to the end
       double splitVal = Math.random() * 0.95 + 0.025;
 
       SplitterVertex sv0 = new SplitterVertex(
-        null,
         "split",
         x + delta * splitVal,
         y + delta * splitVal,
         new NonLocalizedString("split")
       );
       SplitterVertex sv1 = new SplitterVertex(
-        null,
         "split",
         x + delta * splitVal,
         y + delta * splitVal,
@@ -108,23 +110,26 @@ public class LinkingTest {
    * We do this by building the graphs and then comparing the stop tree caches.
    */
   @Test
-  public void testStopsLinkedIdentically() throws URISyntaxException {
+  public void testStopsLinkedIdentically() {
     // build the graph without the added stops
     TestOtpModel model = buildGraphNoTransit();
     Graph g1 = model.graph();
     TransitModel transitModel1 = model.transitModel();
-    addRegularStopGrid(g1, transitModel1);
+    addRegularStopGrid(g1);
     link(g1, transitModel1);
 
     TestOtpModel model2 = buildGraphNoTransit();
     Graph g2 = model2.graph();
     TransitModel transitModel2 = model2.transitModel();
-    addExtraStops(g2, transitModel2);
-    addRegularStopGrid(g2, transitModel2);
+    addExtraStops(g2);
+    addRegularStopGrid(g2);
     link(g2, transitModel2);
 
+    var transitStopVertices = g1.getVerticesOfType(TransitStopVertex.class);
+    assertEquals(1350, transitStopVertices.size());
+
     // compare the linkages
-    for (TransitStopVertex ts : g1.getVerticesOfType(TransitStopVertex.class)) {
+    for (TransitStopVertex ts : transitStopVertices) {
       List<StreetTransitStopLink> stls1 = outgoingStls(ts);
       assertTrue(stls1.size() >= 1);
 
@@ -142,6 +147,22 @@ public class LinkingTest {
     }
   }
 
+  /** Build a graph in Columbus, OH with no transit */
+  public static TestOtpModel buildGraphNoTransit() {
+    var deduplicator = new Deduplicator();
+    var stopModel = new StopModel();
+    var gg = new Graph(deduplicator);
+    var transitModel = new TransitModel(stopModel, deduplicator);
+
+    File file = ResourceLoader.of(LinkingTest.class).file("columbus.osm.pbf");
+    OsmProvider provider = new OsmProvider(file, false);
+
+    OsmModule osmModule = OsmModule.of(provider, gg).build();
+
+    osmModule.buildGraph();
+    return new TestOtpModel(gg, transitModel);
+  }
+
   private static List<StreetTransitStopLink> outgoingStls(final TransitStopVertex tsv) {
     return tsv
       .getOutgoing()
@@ -149,6 +170,6 @@ public class LinkingTest {
       .filter(StreetTransitStopLink.class::isInstance)
       .map(StreetTransitStopLink.class::cast)
       .sorted(Comparator.comparing(e -> e.getGeometry().getLength()))
-      .collect(Collectors.toList());
+      .toList();
   }
 }
